samples/_failures_safe/1761510830_e368c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8c2c1ba.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_e8c2c1ba.c:154:9: error: expected ‘:’ or ‘...’ at end of input
  154 |         case TOKEN_EOF
      |         ^~~~
./samples/SAFE/__tmp_e8c2c1ba.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e8c2c1ba.c:154:9: error: expected declaration or statement at end of input
